# MLOPS

./: LICENSE  MLproject  README.md  mlops_tutorial.ipynb  pyproject.toml  requirements.txt
tutorials/pokemon/: MLproject  conda.yaml  fetch_model.py  train_model.py
tutorials/pokemon/argo_workflow/: workflow.yaml
tutorials/pokemon/argocd/: pokemon-api-app.yaml
tutorials/pokemon/bash_command/: argo_deb_install.sh  fetch_model_run.sh  local_run.sh  remote_run.sh
tutorials/pokemon/k8s/: deployment.yaml  ingress.yaml  service.yaml
tutorials/pokemon/workflow/: workflow.yaml
