[tool.poetry]
name = "mlops"
version = "0.1.0"
description = ""
authors = ["Pengfei Liu <liu.pengfei@hotmail.fr>"]

[tool.poetry.dependencies]
python = "^3.8"
mlflow = "^1.28.0"
scikit-learn = "^1.1.2"
jupyter = "^1.0.0"
pandas = "^1.4.3"
boto3 = "^1.24.63"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
